name:                kicad-hs
version:             0.1.0.0
synopsis:            Library for manipulating Kicad design sources.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2018 Ben Gamari
-- category:            
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Kicad.Pcb
                       Kicad.Netlist
                       Kicad.SExpr
                       Kicad.SExpr.Parse
                       Kicad.SExpr.Class
                       Kicad.Schematic
  build-depends:       base >=4.10 && <4.13,
                       yaml >=0.8 && <0.9,
                       lens >=4.16 && <4.17,
                       scientific >=0.3 && <0.4,
                       containers >=0.5 && <0.6,
                       transformers >=0.5 && <0.6,
                       charset,
                       linear,
                       trifecta,
                       prettyprinter,
                       text
  hs-source-dirs:      src                
  default-language:    Haskell2010

executable kicad-replicate
  main-is:             Replicate.hs
  other-extensions:    RankNTypes, DataKinds, FlexibleContexts, OverloadedStrings, RecordWildCards, TemplateHaskell, GeneralizedNewtypeDeriving, FlexibleInstances, MultiParamTypeClasses, TypeFamilies, MonadFailDesugaring, TypeSynonymInstances, DeriveFunctor
  build-depends:       base,
                       yaml,
                       lens,
                       scientific,
                       containers,
                       linear,
                       text,
                       kicad-hs
  default-language:    Haskell2010
