name:                kicad-hs
version:             0.1.0.0
synopsis:            Library for manipulating Kicad design sources.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2018 Ben Gamari
-- category:            
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Kicad.Pcb
                       Kicad.Netlist
                       Kicad.SExpr
                       Kicad.SExpr.Parse
                       Kicad.SExpr.Class
                       Kicad.Symbol
                       Kicad.Schematic
  build-depends:       base >=4.15 && <4.20,
                       yaml >=0.8 && <0.12,
                       lens >=4.16 && <5.3,
                       scientific >=0.3 && <0.4,
                       containers >=0.5 && <0.8,
                       transformers >=0.5 && <0.7,
                       charset,
                       linear,
                       trifecta,
                       prettyprinter,
                       text
  hs-source-dirs:      src                
  default-language:    Haskell2010

executable kicad-mk-symbol
  main-is:             MkSymbol.hs
  build-depends:       base,
                       lens,
                       scientific,
                       containers,
                       linear,
                       text,
                       bytestring,
                       cassava,
                       kicad-hs
  default-language:    Haskell2010

executable kicad-repin-footprint
  main-is:             RepinFootprint.hs
  build-depends:       base,
                       lens,
                       scientific,
                       containers,
                       text,
                       bytestring,
                       cassava,
                       kicad-hs
  default-language:    Haskell2010

executable kicad-replicate
  main-is:             Replicate.hs
  build-depends:       base,
                       yaml,
                       lens,
                       scientific,
                       containers,
                       linear,
                       text,
                       kicad-hs
  default-language:    Haskell2010
